--- a/style.scss
+++ b/style.scss
@@ -25,8 +25,7 @@ header,
 #button_explore button,
 .images_icone_nouveau,
 .icone_like,
-.presentation
-	{
+.presentation {
 	position: relative;
 }
 
@@ -40,6 +39,35 @@ header {
 	padding-top: 1rem;
 	width: auto;
 }
+
+// spinner DEBUT
+
+.loader {
+	border-top: 16px solid blue;
+	border-right: 16px solid green;
+	border-bottom: 16px solid red;
+	border-left: 16px solid yellow;
+	border-radius: 50%;
+	width: 120px;
+	height: 120px;
+	animation: spin 5s linear;
+	z-index: 1;
+
+}
+
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+		opacity: 1;
+	}
+
+	100% {
+		transform: rotate(360deg);
+		opacity: 0;
+	}
+}
+
+// spinner FIN
 
 #logo_omyfood_header {
 	width: 30rem;
