--- a/style.scss
+++ b/style.scss
@@ -188,6 +188,7 @@ header {
 		width: 3rem;
 		height: 3rem;
 	}
+
 	padding-bottom: 1rem;
 }
 
@@ -272,6 +273,14 @@ header {
 		font-size: 1.5rem;
 	}
 
+	& a {
+		color: black;
+		text-decoration: none;
+
+		& :visited {
+			text-decoration: none;
+		}
+	}
 }
 
 .carte_resto {
