--- a/style.css
+++ b/style.css
@@ -48,6 +48,82 @@ header {
   width: auto;
 }
 
+.loader {
+  border: 16px solid #f3f3f3;
+  /* Light grey */
+  border-top: 16px solid #3498db;
+  /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 1s linear 4;
+          animation: spin 1s linear 4;
+  position: relative;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: #e9e9e9;
+  z-index: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-animation: fade_out 400ms 4s;
+          animation: fade_out 400ms 4s;
+}
+
+@-webkit-keyframes fade_out {
+  0% {
+    -webkit-transform: display(block);
+            transform: display(block);
+  }
+  100% {
+    -webkit-transform: display(none);
+            transform: display(none);
+  }
+}
+
+@keyframes fade_out {
+  0% {
+    -webkit-transform: display(block);
+            transform: display(block);
+  }
+  100% {
+    -webkit-transform: display(none);
+            transform: display(none);
+  }
+}
+
 #logo_omyfood_header {
   width: 30rem;
   height: 3.25rem;
