--- a/style.scss
+++ b/style.scss
@@ -42,30 +42,57 @@ header {
 
 // spinner DEBUT
 
-// .loader {
-// 	border-top: 16px solid blue;
-// 	border-right: 16px solid green;
-// 	border-bottom: 16px solid red;
-// 	border-left: 16px solid yellow;
-// 	border-radius: 50%;
-// 	width: 120px;
-// 	height: 120px;
-// 	animation: spin 5s linear;
-// 	z-index: 1;
+.loader {
+	border: 16px solid #f3f3f3;
+	/* Light grey */
+	border-top: 16px solid #3498db;
+	/* Blue */
+	border-radius: 50%;
+	width: 120px;
+	height: 120px;
+	animation: spin 1s linear 4;
+	position: relative;
+	
+	
+	
+}
 
-// }
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
 
-// @keyframes spin {
-// 	0% {
-// 		transform: rotate(0deg);
-// 		opacity: 1;
-// 	}
+	100% {
+		transform: rotate(360deg);
+		// display: none;
+	}
 
-// 	100% {
-// 		transform: rotate(360deg);
-// 		opacity: 0;
-// 	}
-// }
+}
+
+.container {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	background-color: $color-location;
+	z-index: 1;
+	@include div-center;
+	animation : fade_out 400ms 4s;
+
+	@keyframes fade_out {
+		0% {
+			transform: display(block);
+		}
+	
+		100% {
+			transform: display(none);
+			// display: none;
+		}
+
+	}
+	
+}
+
+
 
 // spinner FIN
 
