--- a/style.css
+++ b/style.css
@@ -50,9 +50,7 @@ header {
 
 .loader {
   border: 16px solid #f3f3f3;
-  /* Light grey */
   border-top: 16px solid #3498db;
-  /* Blue */
   border-radius: 50%;
   width: 120px;
   height: 120px;
@@ -60,8 +58,6 @@ header {
           animation: spin 1s linear 4;
   position: absolute;
   background-color: blue;
-  left: 50%;
-  top: 50%;
   z-index: 1;
 }
 
@@ -106,6 +102,10 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-animation: contain 4s cubic-bezier(1, 0, 1, 1) forwards;
           animation: contain 4s cubic-bezier(1, 0, 1, 1) forwards;
 }
