--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ header {
   }
   100% {
     opacity: 0;
+    display: none;
   }
 }
 
@@ -131,6 +132,7 @@ header {
   }
   100% {
     opacity: 0;
+    display: none;
   }
 }
 
