--- a/style.css
+++ b/style.css
@@ -113,26 +113,40 @@ header {
 @-webkit-keyframes contain {
   0% {
     opacity: 1;
+    top: 0;
+    left: 0;
   }
   90% {
     opacity: 1;
+    top: 0;
+    left: 0;
   }
   100% {
     opacity: 0;
     display: none;
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
   }
 }
 
 @keyframes contain {
   0% {
     opacity: 1;
+    top: 0;
+    left: 0;
   }
   90% {
     opacity: 1;
+    top: 0;
+    left: 0;
   }
   100% {
     opacity: 0;
     display: none;
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
   }
 }
 
@@ -502,5 +516,15 @@ footer {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+}
+
+.photo_resto_menu {
+  width: 100%;
+  max-height: 18rem;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 50% 50%;
+     object-position: 50% 50%;
 }
 /*# sourceMappingURL=style.css.map */
