--- a/style.scss
+++ b/style.scss
@@ -83,15 +83,23 @@ header {
 @keyframes contain {
 	0% {
 		opacity: 1;
+		top: 0;
+		left: 0;
 	}
 
 	90% {
 		opacity: 1;
+		top: 0;
+		left: 0;
+
 	}
 
 	100% {
 		opacity: 0;
 		display: none;
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
 	}
 }
 
@@ -382,3 +390,15 @@ footer {
 	@include struct-col-space;
 	align-items: flex-start;
 }
+
+
+// Menu 1, 2, 3, 4
+.photo_resto_menu {
+	width: 100%;
+	max-height: 18rem;
+	height: auto;
+	// border-radius: 20px 20px 0 0;
+	object-fit: cover;
+	object-position: 50% 50%;
+}
+
