--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,13 @@
 	font-style: normal;
 }
 
+@font-face {
+	font-family: Shrikhand ;
+	src: url('fonts/Shrikhand-Regular.ttf');
+	font-weight: normal;
+	font-style: normal;
+}
+
 :root {
 	font-size: 62.5%;
 }
