--- a/style.scss
+++ b/style.scss
@@ -399,7 +399,7 @@ footer {
 }
 
 
-// Menu 1, 2, 3, 4
+// Menu 1, 2, 3, 4 DEBUT
 .photo_resto_menu {
 	width: 100%;
 	max-height: 18rem;
@@ -409,3 +409,10 @@ footer {
 	object-position: 50% 50%;
 }
 
+.titre_lieu a h2 {
+	font-family: Shrikhand;
+	font-size: 2.9rem;
+	font-weight: 300;
+}
+
+// Menu 1, 2, 3, 4 FIN
