--- a/style.css
+++ b/style.css
@@ -540,4 +540,14 @@ footer {
   font-size: 2.9rem;
   font-weight: 300;
 }
+
+hr {
+  display: block;
+  height: 1px;
+  width: 40px;
+  border: 0;
+  border-top: 3px solid #99E2D0;
+  margin: 1em 0;
+  padding: 0;
+}
 /*# sourceMappingURL=style.css.map */
