--- a/style.scss
+++ b/style.scss
@@ -415,4 +415,14 @@ footer {
 	font-weight: 300;
 }
 
+hr {
+    display: block;
+    height: 1px;
+    width: 40px;
+    border: 0;
+    border-top: 3px solid $color-tertiary;
+    margin: 1em 0;
+    padding: 0;
+}
+
 // Menu 1, 2, 3, 4 FIN
