--- a/style.css
+++ b/style.css
@@ -535,10 +535,10 @@ footer {
      object-position: 50% 50%;
 }
 
-.titre_lieu a h2 {
+.resto_menu {
   font-family: Shrikhand;
-  font-size: 2.9rem;
-  font-weight: 300;
+  font-size: 2.9rem !important;
+  font-weight: 300 !important;
 }
 
 hr {
@@ -549,5 +549,29 @@ hr {
   border-top: 3px solid #99E2D0;
   margin: 1em 0;
   padding: 0;
+}
+
+.menu {
+  background-color: #f6f6f6;
+}
+
+.entrees,
+.plats,
+.desserts {
+  padding: 1rem;
+  background-color: #f6f6f6;
+}
+
+.entrees h3,
+.plats h3,
+.desserts h3 {
+  font-size: 1.5rem !important;
+  font-weight: 100 !important;
+}
+
+.entree_element,
+.plats_element,
+.desserts_element {
+  border-radius: 30px;
 }
 /*# sourceMappingURL=style.css.map */
