--- a/style.css
+++ b/style.css
@@ -547,7 +547,7 @@ hr {
   width: 40px;
   border: 0;
   border-top: 3px solid #99E2D0;
-  margin: 1em 0;
+  margin: 0;
   padding: 0;
 }
 
@@ -558,6 +558,22 @@ hr {
 .entrees,
 .plats,
 .desserts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   padding: 1rem;
   background-color: #f6f6f6;
 }
@@ -567,6 +583,7 @@ hr {
 .desserts h3 {
   font-size: 1.5rem !important;
   font-weight: 100 !important;
+  margin-bottom: 0.5rem;
 }
 
 .entree_element,
