--- a/style.scss
+++ b/style.scss
@@ -421,7 +421,7 @@ hr {
 	width: 40px;
 	border: 0;
 	border-top: 3px solid $color-tertiary;
-	margin: 1em 0;
+	margin: 0;
 	padding: 0;
 }
 
@@ -432,11 +432,16 @@ hr {
 .entrees,
 .plats,
 .desserts {
+	@include div-center;
+	flex-direction: column;
+	align-items: flex-start;
 	padding: 1rem;
 	background-color: $color-btn;
+
 	& h3 {
 		font-size: 1.5rem !important;
 		font-weight: 100 !important;
+		margin-bottom: 0.5rem;
 	}
 }
 
