--- a/style.scss
+++ b/style.scss
@@ -432,8 +432,9 @@ hr {
 .entrees,
 .plats,
 .desserts {
-	@include div-center;
+	display: flex;
 	flex-direction: column;
+	justify-content: space-between;
 	align-items: flex-start;
 	padding: 1rem;
 	background-color: $color-btn;
@@ -450,7 +451,38 @@ hr {
 .entree_element,
 .plats_element,
 .desserts_element {
-	border-radius: 30px;
+	position: relative;
+	border-radius: 20px;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	border: none;
+	background-color: $initial-color;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	margin-bottom: 1.5rem;
+	padding-left: 1rem;
 }
+
+.titre_element {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
+	& h2 {
+		margin-top: 0.5rem;
+		margin-bottom: 0.5rem;
+		font-size: 1.6rem;
+		font-weight: 600;
+	}
+	& h3 {
+		margin-top: 0.5rem;
+		margin-bottom: 0.5rem;
+	}
+}
+
+
 
 // Menu 1, 2, 3, 4 FIN
