--- a/style.css
+++ b/style.css
@@ -583,6 +583,12 @@ hr {
   margin-bottom: 0.5rem;
 }
 
+.entrees hr,
+.plats hr,
+.desserts hr {
+  margin-bottom: 1rem;
+}
+
 .entree_element,
 .plats_element,
 .desserts_element {
@@ -608,6 +614,13 @@ hr {
           box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   margin-bottom: 1.5rem;
   padding-left: 1rem;
+}
+
+.entree_element:hover,
+.plats_element:hover,
+.desserts_element:hover {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 35px;
+          box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 35px;
 }
 
 .titre_element {
