--- a/style.scss
+++ b/style.scss
@@ -55,7 +55,7 @@ header {
 	border-radius: 50%;
 	width: 120px;
 	height: 120px;
-	animation: spin 1s linear 4;
+	animation: spin 1s linear 2;
 	position: absolute;
 	background-color: blue;
 	z-index: 1;
@@ -83,7 +83,7 @@ header {
 	z-index: 1;
 	@include div-center;
 	flex-direction: column;
-	animation: contain 4s cubic-bezier(1, 0, 1, 1) forwards;
+	animation: contain 2s cubic-bezier(1, 0, 1, 1) forwards;
 }
 
 
@@ -468,8 +468,41 @@ hr {
 	margin-bottom: 1.5rem;
 	padding-left: 1rem;
 
+
+
 	&:hover {
 		box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 35px;
+	}
+
+}
+
+.element_1 {
+	animation: appear 1000ms 200ms ease-in-out backwards;
+}
+
+.element_2 {
+	animation: appear 1000ms 300ms ease-in-out backwards;
+}
+
+.element_3 {
+	animation: appear 1000ms 500ms ease-in-out backwards;
+}
+
+@keyframes appear {
+	0% {
+		transform: translateY(3rem);
+		opacity: 0;
+	}
+
+	// 30% {
+	// 	transform: translateY(3rem);
+	// 	opacity: 0;
+	// }
+
+
+	100% {
+		transform: translateY(0);
+		opacity: 1;
 	}
 }
 
@@ -479,12 +512,14 @@ hr {
 	flex-direction: column;
 	justify-content: center;
 	align-items: flex-start;
+
 	& h2 {
 		margin-top: 0.5rem;
 		margin-bottom: 0.5rem;
 		font-size: 1.6rem;
 		font-weight: 600;
 	}
+
 	& h3 {
 		margin-top: 0.5rem;
 		margin-bottom: 0.5rem;
