--- a/style.css
+++ b/style.css
@@ -56,15 +56,16 @@ header {
 }
 
 .loader {
-  border: 16px solid #f3f3f3;
-  border-top: 16px solid #3498db;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border: 3px solid #FF79DA;
   border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  -webkit-animation: spin 1s linear 2;
-          animation: spin 1s linear 2;
+  border-top-color: #99E2D0;
+  animation: spin 1s ease-in-out infinite;
+  -webkit-animation: spin 1s ease-in-out infinite;
   position: absolute;
-  background-color: blue;
+  background-color: #9356DC;
   z-index: 1;
 }
 
