--- a/style.css
+++ b/style.css
@@ -59,9 +59,9 @@ header {
   display: inline-block;
   width: 50px;
   height: 50px;
-  border: 3px solid #FF79DA;
+  border: 3px solid #99E2D0;
   border-radius: 50%;
-  border-top-color: #99E2D0;
+  border-top-color: #FF79DA;
   animation: spin 1s ease-in-out infinite;
   -webkit-animation: spin 1s ease-in-out infinite;
   position: absolute;
