--- a/style.scss
+++ b/style.scss
@@ -50,18 +50,12 @@ header {
 // spinner DEBUT
 
 .loader {
-	// border: 16px solid #f3f3f3;
-	// border-top: 16px solid #3498db;
-	// border-radius: 50%;
-	// width: 120px;
-	// height: 120px;
-	// animation: spin 1s linear 2;
 	display: inline-block;
 	width: 50px;
 	height: 50px;
-	border: 3px solid $color-secondary;
+	border: 3px solid $color-tertiary;
 	border-radius: 50%;
-	border-top-color: $color-tertiary;
+	border-top-color: $color-secondary;
 	animation: spin 1s ease-in-out infinite;
 	-webkit-animation: spin 1s ease-in-out infinite;
 	position: absolute;
