--- a/style.css
+++ b/style.css
@@ -421,11 +421,13 @@ header {
 .titre_lieu h2 {
   font-weight: 600;
   font-size: 1.9rem;
+  margin-bottom: 0.5rem !important;
 }
 
 .titre_lieu h3 {
   font-weight: 100;
   font-size: 1.5rem;
+  margin-top: 0.5rem !important;
 }
 
 .titre_lieu a {
@@ -440,6 +442,9 @@ header {
 .carte_resto {
   margin-top: 1rem;
   margin-bottom: 1rem;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px;
+          box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px;
+  border-radius: 20px 20px 20px 20px;
 }
 
 #nouveau_1,
@@ -467,7 +472,7 @@ header {
       -ms-flex-align: center;
           align-items: center;
   background-color: #FFFFFF;
-  border-radius: 0 0 20px 20px;
+  border-radius: 20px 20px 20px 20px;
   padding-left: 1rem;
   padding-right: 1rem;
 }
@@ -502,6 +507,10 @@ header {
   background: #f6f6f6;
   padding-left: 2rem;
   padding-right: 2rem;
+}
+
+#restaurants {
+  padding-bottom: 5rem;
 }
 
 footer {
