--- a/style.css
+++ b/style.css
@@ -447,6 +447,21 @@ header {
   border-radius: 20px 20px 20px 20px;
 }
 
+.carte_menu {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.button_commander {
+  margin-top: 3rem;
+  margin-bottom: 4rem;
+}
+
+.button_commander a {
+  font-size: 1.4rem !important;
+  font-weight: 600 !important;
+}
+
 #nouveau_1,
 #nouveau_2 {
   opacity: 1;
