--- a/style.scss
+++ b/style.scss
@@ -332,6 +332,19 @@ header {
 	}
 }
 
+#main_titre_menu {
+	margin-top: 0 !important;
+}
+
+.main_titre_menu {
+	background-color: $color-btn !important;
+	
+	& h2 {
+		font-family: Shrikhand;
+		font-size: 3rem;
+	}
+}
+
 .carte_resto {
 	margin-top: 1rem;
 	margin-bottom: 1rem;
@@ -514,6 +527,11 @@ hr {
 .element_3 {
 	animation: appear 1000ms 500ms ease-in-out backwards;
 }
+
+.element_4 {
+	animation: appear 1000ms 700ms ease-in-out backwards;
+}
+
 
 @keyframes appear {
 	0% {
