--- a/style.scss
+++ b/style.scss
@@ -32,7 +32,8 @@ header,
 #button_explore button,
 .images_icone_nouveau,
 .icone_like,
-.presentation {
+.presentation,
+.titre_element {
 	position: relative;
 }
 
@@ -469,7 +470,6 @@ footer {
 	width: 100%;
 	max-height: 18rem;
 	height: auto;
-	// border-radius: 20px 20px 0 0;
 	object-fit: cover;
 	object-position: 50% 50%;
 }
@@ -534,12 +534,7 @@ hr {
 
 @keyframes icon_rotation {
 	0% {
-		// transform-origin: center right;
 		transform: rotate(90deg);
-		// z-index: -1;
-		// position: relative;
-		// opacity: 0;
-
 	}
 
 
@@ -547,9 +542,6 @@ hr {
 	100% {
 
 		transform: rotate(360deg);
-		// z-index: 2;
-		// position: relative;
-		// opacity: 1;
 	}
 }
 
@@ -569,7 +561,6 @@ hr {
 	margin-bottom: 1.5rem;
 	padding-left: 1rem;
 	z-index: 1;
-	// animation: selection_plat_out 600ms ease-in-out both;
 
 	&:active {
 		padding-right: 0;
@@ -599,8 +590,6 @@ hr {
 
 	}
 
-
-
 	100% {
 
 		transform: translateX(0px);
@@ -609,27 +598,6 @@ hr {
 		opacity: 1;
 	}
 }
-
-// @keyframes selection_plat_out {
-// 	0% {
-
-// 		transform: translateX(0px);
-// 		z-index: 2;
-// 		position: relative;
-// 		opacity: 1;
-// 	}
-
-
-// 	100% {
-// 		transform-origin: center right;
-// 		transform: translateX(400px);
-// 		z-index: -1;
-// 		position: relative;
-// 		opacity: 0;
-
-// 	}
-
-// }
 
 .element_1 {
 	animation: appear 1000ms 200ms ease-in-out backwards;
@@ -662,7 +630,6 @@ hr {
 }
 
 .titre_element {
-	position: relative;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
