--- a/style.scss
+++ b/style.scss
@@ -33,7 +33,10 @@ header,
 .images_icone_nouveau,
 .icone_like,
 .presentation,
-.titre_element {
+.titre_element,
+.entree_element,
+.plats_element,
+.desserts_element {
 	position: relative;
 }
 
@@ -548,7 +551,6 @@ hr {
 .entree_element,
 .plats_element,
 .desserts_element {
-	position: relative;
 	border-radius: 15px;
 	width: 100%;
 	display: flex;
