--- a/style.scss
+++ b/style.scss
@@ -460,6 +460,16 @@ footer {
 	align-items: flex-start;
 }
 
+.lien_contact {
+	text-decoration: none !important;
+	color: $initial-color !important;
+
+	&:visited {
+		text-decoration: none !important;
+		color: $initial-color !important;
+
+	}
+}
 
 // Menu 1, 2, 3, 4 DEBUT
 
