--- a/style.css
+++ b/style.css
@@ -657,6 +657,7 @@ hr {
           align-items: flex-start;
   padding: 1rem;
   background-color: #f6f6f6;
+  overflow-y: hidden;
 }
 
 .entrees h3,
@@ -696,8 +697,8 @@ hr {
 .logo_check {
   width: 3rem;
   height: 3rem;
-  -webkit-animation: icon_rotation 1.5s 1s ease-in-out backwards infinite;
-          animation: icon_rotation 1.5s 1s ease-in-out backwards infinite;
+  -webkit-animation: icon_rotation 1.5s 1.3s ease-in-out;
+          animation: icon_rotation 1.5s 1.3s ease-in-out;
 }
 
 @-webkit-keyframes icon_rotation {
