--- a/style.css
+++ b/style.css
@@ -553,6 +553,66 @@ header,
   height: 3rem;
 }
 
+.icon {
+  width: 4rem;
+  height: 4rem;
+  overflow-y: hidden;
+}
+
+.icon.heart path {
+  stroke-dasharray: 1560;
+  stroke-dashoffset: 0;
+}
+
+.icon.heart:hover path {
+  -webkit-animation: animate-heart 1s ease-in-out both;
+          animation: animate-heart 1s ease-in-out both;
+}
+
+.icon path {
+  fill: transparent;
+  stroke-width: 10;
+  stroke: black;
+}
+
+@-webkit-keyframes animate-heart {
+  0% {
+    stroke-dashoffset: 0;
+    fill: transparent;
+  }
+  75% {
+    stroke-dashoffset: 1560;
+    fill: transparent;
+  }
+  80% {
+    stroke-dashoffset: 1560;
+    fill: url(#grad1);
+  }
+  100% {
+    stroke-dashoffset: 1560;
+    fill: url(#grad2);
+  }
+}
+
+@keyframes animate-heart {
+  0% {
+    stroke-dashoffset: 0;
+    fill: transparent;
+  }
+  75% {
+    stroke-dashoffset: 1560;
+    fill: transparent;
+  }
+  80% {
+    stroke-dashoffset: 1560;
+    fill: url(#grad1);
+  }
+  100% {
+    stroke-dashoffset: 1560;
+    fill: url(#grad2);
+  }
+}
+
 .restaurants,
 .presentation {
   background: #f6f6f6;
