--- a/style.css
+++ b/style.css
@@ -554,8 +554,8 @@ header,
 }
 
 .icon {
-  width: 4rem;
-  height: 4rem;
+  width: 3rem;
+  height: 3rem;
   overflow-y: hidden;
 }
 
@@ -565,8 +565,8 @@ header,
 }
 
 .icon.heart:hover path {
-  -webkit-animation: animate-heart 1s ease-in-out both;
-          animation: animate-heart 1s ease-in-out both;
+  -webkit-animation: animate-heart 2s ease-in-out both;
+          animation: animate-heart 2s ease-in-out both;
 }
 
 .icon path {
@@ -579,16 +579,10 @@ header,
   0% {
     stroke-dashoffset: 0;
     fill: transparent;
-  }
-  75% {
-    stroke-dashoffset: 1560;
-    fill: transparent;
-  }
-  80% {
-    stroke-dashoffset: 1560;
-    fill: url(#grad1);
+    opacity: 0;
   }
   100% {
+    opacity: 1;
     stroke-dashoffset: 1560;
     fill: url(#grad2);
   }
@@ -598,16 +592,10 @@ header,
   0% {
     stroke-dashoffset: 0;
     fill: transparent;
-  }
-  75% {
-    stroke-dashoffset: 1560;
-    fill: transparent;
-  }
-  80% {
-    stroke-dashoffset: 1560;
-    fill: url(#grad1);
+    opacity: 0;
   }
   100% {
+    opacity: 1;
     stroke-dashoffset: 1560;
     fill: url(#grad2);
   }
