--- a/style.css
+++ b/style.css
@@ -465,6 +465,10 @@ header,
   margin-top: 0 !important;
 }
 
+.palette, .note {
+  margin-right: 1rem;
+}
+
 .main_titre_menu {
   background-color: #f6f6f6 !important;
 }
@@ -565,8 +569,8 @@ header,
 }
 
 .icon.heart:hover path {
-  -webkit-animation: animate-heart 2s ease-in-out both;
-          animation: animate-heart 2s ease-in-out both;
+  -webkit-animation: animate-heart 1s ease-in-out both;
+          animation: animate-heart 1s ease-in-out both;
 }
 
 .icon path {
