--- a/style.css
+++ b/style.css
@@ -638,6 +638,10 @@ footer {
           align-items: flex-start;
 }
 
+footer h1 {
+  font-size: 1.5rem !important;
+}
+
 .lien_contact {
   text-decoration: none !important;
   color: #FFFFFF !important;
